[DevTools] Mark newly created tabs in Target.targetCreated as pages

Due to WebContents not being added to TabStripModel yet, newly created
tabs were reported as "other" type.

This patch introduces a stack-allocated scope which notifies
ChromeDevToolsManagerDelegate about the WebContents being created.

Bug: 759783
Change-Id: I35ac9ce81d1a0401216f71854c234ff08fa743c5